# astrobee

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .isort.cfg  404.html  CMakeGraphVizOptions.cmake  CMakeLists.txt  INSTALL.md  INSTALL_Ubuntu18.md  NASA_INSTALL.md  NOTICE  README.md  RELEASE.md  THIRD_PARTY  Tree.txt  abee.code-workspace  astrobee.code-workspace  astrobee.doxyfile  doc_version_select.js  freeflyer.doxyfile  import rosbag.py  licenses.csv  sim_issues.md
astrobee/: CMakeLists.txt  package.xml  readme.md
astrobee/commands/: .gitignore  freeFlyerPlanSchema.json
astrobee/config/: astrobee_markers_ids.config  cameras.config  commands.config  common_lua.config  context.config  dock_gnc.config  dock_markers_print.config  dock_markers_specs.config  dock_markers_world.config  docker.config  faults.config  flight.config  geometry.config  gnc.config  granite_graph_localizer.config  graph_localizer.config  imu_bias.config  iss_graph_localizer.config  localization.config  marker_margins_1.config  marker_margins_2.config  markers_in_world.config  matrix.config  optical_flow.config  overhead_tracker.config  rotations.lua  semantic_objects.config  test.lua  transforms.config
astrobee/gds_configs/: AllInertiaConfig.json  AllOperatingLimitsConfig.json  PlanEditorSetCameraConfig.json  TeleopCommandConfigurations.json
astrobee/launch/: astrobee.launch  astrobee.launch.py  estimate_bias.launch  granite.launch  granite.launch.py  localization_from_bag.launch  mgtf.launch  perching.launch  pico.launch  replay.launch  sim.launch  sim.launch.py  sim_r2.launch  spawn.launch  spawn.launch.py  spawn_astrobee.launch.py
astrobee/plans/: BigX.fplan  cert_demo.fplan  cert_triangle.fplan  cimon_demo.fplan  dockp4.fplan  new-demo-plan.fplan  ptr3-demo.fplan  ptr3-dock.fplan  square.fplan  undockp4.fplan
astrobee/resources/: .gitignore  debug.config  depthcams.rviz  diagnostics.yaml  granite_lab_markers.config  granite_lab_tags.xml  gui.perspective  gui.rviz  logging.config
astrobee/scripts/: apk_print_version.sh  check_env.sh  cpu_print_version.sh  env_wrapper.sh  launch_gds.sh  print_version.sh
astrobee/utilities/: utilities.py
behaviors/arm/: CMakeLists.txt  arm_fsm.dot  nodelet_plugins.xml  package.ros1.xml  package.xml  readme.md
behaviors/dock/: CMakeLists.txt  dock_fsm.dot  nodelet_plugins.xml  package.xml  readme.md
behaviors/light_flow/: CMakeLists.txt  nodelet_plugins.xml  package.ros1.xml  package.xml  readme.md
behaviors/perch/: CMakeLists.txt  nodelet_plugins.xml  package.ros1.xml  package.xml  perch_fsm.dot  readme.md
behaviors/states/: CMakeLists.txt  nodelet_plugins.xml  package.xml  readme.md
communications/comms_bridge/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  readme.md
communications/dds_msgs/: CMakeLists.txt  package.ros1.xml
communications/dds_ros_bridge/: CMakeLists.txt  nodelet_plugins.xml  package.xml  readme.md
communications/ff_hw_msgs/: CMakeLists.txt  package.xml
communications/ff_msgs/: CMakeLists.txt  package.xml
communications/ground_dds_ros_bridge/: CMakeLists.txt  nodelet_plugins.xml  package.xml  readme.md
description/: CMakeLists.txt  nodelet_plugins.xml  package.xml  readme.md
description/description/: CMakeLists.txt  package.xml  readme.md
description/discower/: CMakeLists.txt  package.xml  readme.md
description/launch/: description.launch  framestore.launch
description/scripts/: fetch_media.sh
description/src/: framestore.cc
description/tools/: global_transforms.cc
description/urdf/: astrobee.urdf.xacro  astrobee_carriage.urdf.xacro  astrobee_macro_perching_arm.urdf.xacro  astrobee_model_drag.urdf.xacro  astrobee_sensor_dock_cam.urdf.xacro  astrobee_sensor_nav_cam.urdf.xacro  dock.urdf.xacro  handrail_21_5.urdf.xacro  handrail_30.urdf.xacro  handrail_41_5.urdf.xacro  handrail_8_5.urdf.xacro  iss.urdf.xacro  iss_macro_module.urdf.xacro
hardware/: CMakeLists.txt  CMakeLists.txt_LEGACY  readme.md
hardware/dock/: CMakeLists.txt  nodelet_plugins.xml  package.xml
hardware/eps_driver/: CMakeLists.txt  nodelet_plugins.xml  package.ros1.xml  package.xml  readme.md  test_battery_status.md  test_payload_power.md  test_status_leds.md
hardware/epson_imu/: CMakeLists.txt  nodelet_plugins.xml  package.xml
hardware/fam_cmd_i2c/: CMakeLists.txt  package.ros1.xml  package.xml
hardware/ff_serial/: CMakeLists.txt  package.ros1.xml
hardware/flashlight/: CMakeLists.txt  nodelet_plugins.xml  package.ros1.xml  package.xml  readme.md  test_flashlight.md
hardware/flycapture/: CMakeLists.txt  package.xml
hardware/framestore/: CMakeLists.txt  nodelet_plugins.xml  package.xml  readme.md
hardware/gpio/: CMakeLists.txt  package.xml
hardware/i2c/: CMakeLists.txt  package.xml
hardware/is_camera/: CMakeLists.txt  nodelet_plugins.xml  package.xml
hardware/laser/: CMakeLists.txt  nodelet_plugins.xml  package.xml  readme.md  test_laser.md
hardware/perching_arm/: CMakeLists.txt  nodelet_plugins.xml  package.ros1.xml  package.xml  readme.md
hardware/perching_arm_old/: CMakeLists.txt  nodelet_plugins.xml  package.xml
hardware/pico_driver/: CMakeLists.txt  nodelet_plugins.xml  package.ros1.xml  package.xml  readme.md
hardware/pmc_actuator/: CMakeLists.txt  nodelet_plugins.xml  package.xml  readme.md
hardware/serial/: CMakeLists.txt  package.xml
hardware/signal_lights/: CMakeLists.txt  nodelet_plugins.xml  package.ros1.xml  package.xml  readme.md
hardware/smart_dock/: CMakeLists.txt  package.xml  readme.md
hardware/speed_cam/: CMakeLists.txt  nodelet_plugins.xml  package.ros1.xml  package.xml  readme.md  test_telemetry.md
hardware/temp_monitor/: CMakeLists.txt  nodelet_plugins.xml  package.xml  readme.md  test_temperatures.md
hardware/vive/: CMakeLists.txt  nodelet_plugins.xml  package.xml  readme.md
localization/: CMakeLists.txt  readme.md
simulation/: CMakeLists.txt  advanced_sim_info.md  package.xml  readme.md  running_the_sim.md  sim_issues.md  sim_overview.md
tools/: CMakeLists.txt  faults_during_bag.py  readme.md
wdock/: CMakeLists.txt  package.xml
(+49223 files in other folders)
