<?xml version="1.0"?>
<package>
  <name>astrobee</name>
  <version>0.0.0</version>
  <description>The astrobee package provides system launch functionality.
  </description>
  <license>
  	Apache License, Version 2.0
  </license>
  <author email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </author>
  <maintainer email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>ss
  <run_depend>roscpp</run_depend>
  <export>
  </export>
</package>
