<?xml version="1.0"?>
<package format="3">
  <name>astrobee</name>
  <version>0.0.0</version>
  <description>The astrobee package provides system launch functionality.
  </description>
  <license>
  	Apache License, Version 2.0
  </license>
  <author email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </author>
  <maintainer email="astrobee-fsw@nx.arc.nasa.gov">
    Astrobee Flight Software
  </maintainer>
  <build_depend>ament_cmake</build_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
